--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix"
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "pinia-plugin-persistedstate": "^4.2.0",
     "roboto-fontface": "*",
+    "swiper": "^11.2.4",
     "validator": "^13.12.0",
     "vee-validate": "^4.15.0",
     "vue": "^3.4.31",
